[package]
name = "minhook"
version = "0.4.1"
edition = "2021"
description = "A Rust wrapper for MinHook, a minimalistic x86/x64 API hooking library for Windows."
homepage = "https://github.com/Jakobzs/minhook"
repository = "https://github.com/Jakobzs/minhook"
documentation = "https://docs.rs/minhook"
license-file = "LICENSE"
readme = "README.md"
keywords = ["minhook", "hooking", "hook", "windows", "detour"]
authors = ["Jakobzs <31919330+Jakobzs@users.noreply.github.com>"]

[dependencies]
tracing = { version = "0.1", features = ["log"] }

[dev-dependencies]
once_cell = "1"

[build-dependencies]
cc = "1"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
